--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 TODO
 ====
 1. Do runtrans pridat osetreni neexistence modulu.
-2.
+2. Prepsat na knihovnu, ktera se v binarce jenom bude volat.
+3.
 
 Applied
 =======
