--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@ TODO
 ====
 1. Do runtrans pridat osetreni neexistence modulu.
 2. Prepsat na knihovnu, ktera se v binarce jenom bude volat.
-3.
+3. Pridat help do bin/runtrans, pokud to je u vsech modulu stejne.
+4.
 
 Applied
 =======
