--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 1.06
  - Add EXAMPLE sections to man page.
+ - Add README.
  - Add VERSION to runtrans script.
  - Add check for arguments.
  - Improve SEE ALSO section.
