--- a/README
+++ b/README
@@ -72,7 +72,8 @@ AUTHOR
     Jan Pomikalek, "<xpomikal@fi.muni.cz>"
 
 COPYRIGHT & LICENSE
-    Copyright 2004 Jan Pomikalek, All Rights Reserved.
+     Copyright 2004 Jan Pomikalek, All Rights Reserved.
+     Copyright 2013 Michal Špaček, All Rights Reserved.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
