--- a/README
+++ b/README
@@ -62,6 +62,9 @@ EXAMPLE2
      #    -a <string>     append <string> to each line of output
      #    -h              print this help screen
 
+REPOSITORY
+    <https://github.com/tupinek/App-MetaTrans-RunTrans>
+
 BUGS
     Please report any bugs or feature requests to
     "bug-metatrans@rt.cpan.org", or through the web interface at
