Add myself to AUTHOR section.

--- a/README
+++ b/README
@@ -74,6 +74,8 @@ BUGS
 AUTHOR
     Jan Pomikalek, "<xpomikal@fi.muni.cz>"
 
+    Michal Špaček, "<tupinek@gmail.com>"
+
 COPYRIGHT & LICENSE
      Copyright 2004 Jan Pomikalek, All Rights Reserved.
      Copyright 2013 Michal Špaček, All Rights Reserved.
