--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 1.06
+ - Add DEPENDENCIES section to doc.
  - Add EXAMPLE sections to man page.
  - Add README.
  - Add REPOSITORY section to man page.
