--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
  - Add REPOSITORY section to man page.
  - Add VERSION to runtrans script.
  - Add check for arguments.
+ - Add minimal version of Perl.
  - Add utf8 encoding to doc.
  - Improve SEE ALSO section.
  - Move from MetaTrans package.
