--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
  - Add VERSION to runtrans script.
  - Add check for arguments.
  - Add minimal version of Perl.
+ - Add pragmas to script.
  - Add utf8 encoding to doc.
  - Improve SEE ALSO section.
  - Move from MetaTrans package.
