Improve EXAMPLE sections in doc.

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ SYNOPSIS
 
 EXAMPLE1
      # Run.
-     # ./bin/runtrans MetaTrans::SlovnikCz -m exact pes
+     # runtrans MetaTrans::SlovnikCz -m exact pes
 
      # Output like:
      # pes = pooch
@@ -22,7 +22,7 @@ EXAMPLE1
 
 EXAMPLE2
      # Run.
-     # ./bin/runtrans MetaTrans::SlovnikCz -h
+     # runtrans MetaTrans::SlovnikCz -h
 
      # Output:
      # Multilingual dictionary metasearcher for www.slovnik.cz
