--- a/README
+++ b/README
@@ -72,9 +72,9 @@ BUGS
     be notified of progress on your bug as I make changes.
 
 AUTHOR
-    Jan Pomikalek, "<xpomikal@fi.muni.cz>"
+    Jan Pomikalek, <mailto:xpomikal@fi.muni.cz>
 
-    Michal Špaček, "<tupinek@gmail.com>"
+    Michal Špaček, <mailto:tupinek@gmail.com>
 
 COPYRIGHT & LICENSE
      Copyright 2004 Jan Pomikalek, All Rights Reserved.
