--- a/README
+++ b/README
@@ -78,7 +78,7 @@ AUTHOR
 
 COPYRIGHT & LICENSE
      Copyright 2004 Jan Pomikalek, All Rights Reserved.
-     Copyright 2013 Michal Špaček, All Rights Reserved.
+     Copyright 2013-2015 Michal Špaček, All Rights Reserved.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
