--- a/README
+++ b/README
@@ -74,11 +74,11 @@ BUGS
 AUTHOR
     Jan Pomikalek, <mailto:xpomikal@fi.muni.cz>
 
-    Michal Špaček, <mailto:tupinek@gmail.com>
+    Michal Josef Špaček, <mailto:tupinek@gmail.com>
 
 COPYRIGHT & LICENSE
      Copyright 2004 Jan Pomikalek, All Rights Reserved.
-     Copyright 2013-2015 Michal Špaček, All Rights Reserved.
+     Copyright 2013-2015 Michal Josef Špaček, All Rights Reserved.
 
     This program is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
