Fix loading of module by error check

--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@
  - Add pragmas to script.
  - Add utf8 encoding to doc.
  - Fix Makefile.PL for new version of Perl and no default »use lib '.'«.
+ - Fix loading of module by error check.
  - Improve SEE ALSO section.
  - Move from MetaTrans package.
  - Remove obsolete dependencies.
