--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 TODO
 ====
-1. Do runtrans pridat osetreni neexistence modulu.
 2. Prepsat na knihovnu, ktera se v binarce jenom bude volat.
 3. Pridat help do bin/runtrans, pokud to je u vsech modulu stejne.
 5. LICENSE file.
@@ -10,3 +9,6 @@ Applied
 =======
 4. Zjistit minimalni verzi Perlu.
 OK [20141231] skim
+
+1. Do runtrans pridat osetreni neexistence modulu.
+OK [20171226] skim
