--- a/TODO
+++ b/TODO
@@ -2,7 +2,6 @@ TODO
 ====
 2. Prepsat na knihovnu, ktera se v binarce jenom bude volat.
 3. Pridat help do bin/runtrans, pokud to je u vsech modulu stejne.
-5. LICENSE file.
 6.
 
 Applied
@@ -11,4 +10,7 @@ Applied
 OK [20141231] skim
 
 1. Do runtrans pridat osetreni neexistence modulu.
+OK [20171226] skim
+
+5. LICENSE file.
 OK [20171226] skim
